--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
 </head>
 <body>
     <h1>Bienvenidos a repo1</h1>
-<<<<<<< HEAD
-    <p>Me equivoqué</p>
-=======
-    
->>>>>>> d41e599e728d6a43aecabdde4f3a20a606a019cd
+    <p>Ahora si!</p>
 </body>
 </html>
